Rename execute button to 'apply'
Also change searchbar positioning and fix video centering

--- a/popup.html
+++ b/popup.html
@@ -83,7 +83,9 @@
       </div>
     </div>
 
-    <button id="exec" accesskey="x">E<u>x</u>ecute</button>
+    <div id="table-footer">
+     <button id="exec" accesskey="a"><u>A</u>pply</button>
+    </div>
 
   </body>
 
