Add shader selection for UI with keyboard controls

--- a/popup.html
+++ b/popup.html
@@ -67,7 +67,7 @@
     <div id="table-header">
       <div id="search-wrapper">
         <div class="ui-icon ui-icon-search"></div>
-        <input id="search-bar" type="text" spellcheck="false">
+        <input id="search-bar" type="text" spellcheck="false" tabindex="-1">
       </div>
       <!--
       <img id="refresh" class="btn" src="images/refresh16.png">
@@ -84,7 +84,7 @@
     </div>
 
     <div id="table-footer">
-     <button id="exec" accesskey="a"><u>A</u>pply</button>
+     <button id="exec" accesskey="a" tabindex="-1"><u>A</u>pply</button>
     </div>
 
   </body>
